--- a/Weather/views/index.html
+++ b/Weather/views/index.html
@@ -4,7 +4,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   </head>
   <body>
-      <p>Click the button to get your coordinates.</p>
       <p id="weather"></p>
       <p id="message"></p>
   </body>
@@ -20,14 +19,14 @@
           }
       }
       function showPosition(position){
-        var URL = "https://api.darksky.net/forecast/3b2e8870b6f0151e7ff79d2af4558aa4/" + position.coords.latitude + "," + position.coords.longitude;
-        $.getJSON(URL, function(json){
-          $(".message").html(JSON.stringify(json));
-        });
+        var URL = "https://api.darksky.net/forecast/3b2e8870b6f0151e7ff79d2af4558aa4/" + position.coords.latitude + "," + position.coords.longitude + "?callback=?";
+          $.getJSON(URL, function(json){
+            $("#message").html(JSON.stringify(json));
+            console.log(JSON.stringify(json));
+          });
+        }
+        getLocation();
       }
-
-      getLocation();
-
-    });
+    );
   </script>
 </html>
