--- a/Weather/public/stylesheets/style.css
+++ b/Weather/public/stylesheets/style.css
@@ -1,8 +1,74 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
+  font-size: 40px;
+}
+#design{
+  position: absolute;
+  text-align: right;
+  top: 2%;
+  left: 87%;
+  font-size: 15px;
+  background-color: #E7E7E7;
+  width: 150px;
+  opacity: 0.5;
+  padding: 5px;
+  border-radius: 3px;
+}
+.whitebgr{
+  position: absolute;
+  top: 8%;
+  left: 22%;
+  height: 400px;
+  width:750px;
+  background-color: #E7E7E7;
+  opacity: 0.2;
+  border-radius: 5px;
+}
+#wtrcloud{
+  position: absolute;
+  top: 17%;
+  left:50%;
+  font-size: 200px;
+  text-align: right;
+  align-items: center;
+}
+.c1{
+  position: absolute;
+  text-align: right;
+  top: 13%;
+  left: 22%;
+  width: 350px;
+  height: 200px;
+  font-size: 150px;
+  padding-top: 10px;
+}
+.c2{
+  position: absolute;
+  text-align: right;
+  top: 26%;
+  left:17%;
+  width:350px;
+  height:200px;
 }
 
-a {
-  color: #00B7FF;
+#message1{
+  font-size: 30px;
+  position: relative;
+  bottom: -60px;
+}
+#message5{
+  font-size: 30px;
+  position: relative;
+  bottom: -30px;
+}
+#message6{
+  font-size: 30px;
+  position: relative;
+}
+#message2{
+  position: absolute;
+  top:38%;
+  left: 50%;
+  font-size: 35px;
 }
