--- a/WikipediaViewer/public/stylesheets/style.css
+++ b/WikipediaViewer/public/stylesheets/style.css
@@ -61,7 +61,6 @@ body {
   background: #E7E7E7;
   font-weight: bold;
 }
-
 ul {
   margin-left: 0;
   padding-left: 0;
@@ -69,7 +68,8 @@ ul {
 }
 
 ul a h1 {
-  font-size: 18px;
+  font-size: 16px;
+  color: aqua;
 }
 ul a p {
   font-size: 14px;
@@ -84,6 +84,20 @@ li {
   color: black;
 }
 ul li:hover {
-  border-left: 5px solid yellow;
-  margin-left: -5px;
+  border-left: 5px solid aqua;
+  cursor: pointer;
+  margin-left: -10px;
+}
+
+#design{
+  position: absolute;
+  text-align: right;
+  top: 2%;
+  left: 85%;
+  font-size: 15px;
+  background-color: #E7E7E7;
+  width: 180px;
+  opacity: 0.5;
+  padding: 10px;
+  border-radius: 3px;
 }
