--- a/Quote Generator/public/stylesheets/style.css
+++ b/Quote Generator/public/stylesheets/style.css
@@ -3,31 +3,84 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
+a{
+  color: inherit;
+}
+* {
+  font-family: 'Lato', sans-serif;
   color: #00B7FF;
 }
-.getquote {
-  width:450px;
+.quote {
+  width:200px;
   margin:auto;
   display:block;
-  height:38px;
+  height:42px;
   border:none;
   border-radius:3px;
   color:#fff;
   background-color:#333;
   outline:none;
-  font-size:0.85em;
+  font-size: 20px;
   padding: 8px 18px 6px 18px;
   margin-top:30px;
   opacity:1;
   cursor:pointer;
 }
+#author{
+  position: absolute;
+  top: 205px;
+  width: 300px;
+  height: 60px;
+  left: 275px;
+  text-align: center;
+  font-size: 30px;
+}
+.getquote{
+  position: absolute;
+  top: 300px;
+  left: 355px;
+}
+.publishquote{
+  position: absolute;
+  top: 300px;
+  left: 85px;
+}
 .getquote:hover {
   opacity:0.9;
 }
+.publishquote:hover{
+  opacity: 0.9
+}
+.quote-box{
+  position: absolute;
+  top: 15%;
+  left: 25%;
+  width: 600px;
+  height: 400px;
+  background: white;
+  border-radius: 5px;
+  padding: 8px 16px 8px 16px;
+  opacity: 0.95;
+}
 #text{
-  color:white;
+  color: inherit;
+  font-size: 33px;
+  padding-left: 50px;
+  width:450px
 }
 #author{
-  color:white;
+  color:black;
+}
+
+#design{
+  position: absolute;
+  text-align: right;
+  top: 2%;
+  left: 82%;
+  font-size: 15px;
+  background-color: white;
+  width: 180px;
+  opacity: 0.95;
+  padding: 10px;
+  border-radius: 3px;
 }
